# Project3

./: CMakeLists.txt  README.md  main  main.c  output.txt  simple3.asm
component/alu/: alu.c  alu.h
component/control_unit/: control_unit.c  control_unit.h
component/forwarding_unit/: forwarding_unit.c  forwarding_unit.h
component/last_branch_prediction/: last_branch_predictor.c  last_branch_predictor.h
component/latch/: latch.c  latch.h
component/memory/: memory.c  memory.h
component/miscelenous/: decode_type.h  opcodes.h
component/register/: register.h  register_impl.c
component/two_bit_predictor/: two_bit_predictor.c  two_bit_predictor.h
single_cycle/decode/: decode_instruction.c  decode_instruction.h  decode_pipe.c  decode_pipe.h
single_cycle/execute/: execute_instruction.c  execute_instruction.h
single_cycle/fetch/: fetch_instruction.c  fetch_instruction.h
single_cycle/memory_access/: memory_access.c  memory_access.h
single_cycle/writeback/: write_back_instruction.c  write_back_instruction.h
test_prog/: addu.asm  linearSearch.mips.asm  test_data_generator.py
test_prog/fib/: fib.mips.asm
test_prog/martix_mult/: init_matrix120x120.h  matrix_mult.c
test_prog/simple2/: simple2.mips.asm
test_prog/simple3/: simple3.mips.asm
test_prog/simple4/: simple4.mips.asm
util/: utils.c  utils.h
